# community-job-portal

./: .gitignore  CONTRIBUTORS.txt  README.md  docker-compose.yml
.envs/.local/: .postgres
backend/community_job_portal/: .coveragerc  .editorconfig  LICENSE  README.rst  gulpfile.js  local.yml  manage.py  package.json  production.yml  pyproject.toml
backend/community_job_portal/community_job_portal/: conftest.py
backend/community_job_portal/community_job_portal/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
backend/community_job_portal/community_job_portal/templates/: base.html
backend/community_job_portal/community_job_portal/templates/account/: password_reset_done.html
backend/community_job_portal/community_job_portal/users/: admin.py  apps.py  urls.py
backend/community_job_portal/community_job_portal/users/api/: serializers.py
backend/community_job_portal/community_job_portal/users/tests/: test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
backend/community_job_portal/compose/local/django/: Dockerfile
backend/community_job_portal/compose/production/django/: Dockerfile
backend/community_job_portal/config/: api_router.py  celery_app.py  urls.py  wsgi.py
backend/community_job_portal/config/settings/: base.py  local.py  production.py  test.py
backend/community_job_portal/docs/: conf.py  index.rst
backend/community_job_portal/requirements/: local.txt  production.txt
backend/db_schema/: CJP_Schema.sql  schema.sql
compose/local/django/: Dockerfile  start
compose/production/django/: Dockerfile
compose/production/traefik/: traefik.yml
frontend/public/: index.html
frontend/src/: App.js
