[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "CJP"
version = "0.1.0"
description = "Community Job Portal"
authors = ["HydPy Community"]
readme = "README.rst"


[tool.poetry.dependencies]
python = "3.8.5"
importlib-metadata = "<1.2.0,>=1.1.3"

pytz= "^2020.1"
python-slugify = "^4.0.1"
Pillow = "^7.2.0"
argon2-cffi = "^20.1.0"
redis = "^3.5.3"
celery = "^4.4.7"
django-celery-beat = "^2.0.0"
flower = "^0.9.5"

django = "^3.1.1"
django-environ = "^0.4.5"
django-model-utils = "^4.0.0"
django-crispy-forms = "^1.9.2"
django-redis = "^4.12.1"
django-health-check = "^3.11"

djangorestframework = "^3.11.1"
django-filter = "^2.3.0"
django-cors-headers = "^3.5.0"
django-storages = "^1.9.1"
django-anymail = {version = "^7.0.0", extras = ["mailgun"]}

gunicorn = "^20.0.4"
psycopg2 = "^2.8.4"
sentry-sdk= "^0.14.3"
django-allauth = "^0.42.0"
whitenoise = "^5.2.0"


[tool.poetry.dev-dependencies]

Werkzeug= "^1.0.1"
ipdb= "^0.13.2"
Sphinx= "^2.4.4"
psycopg2= "^2.8.4"

mypy= "^0.770"
django-stubs= "^1.5.0"
pytest-sugar= "^0.9.2"

flake8= "^3.7.9"
flake8-isort= "^2.9.1"
flake8-pytest-style = "^0.1.3"
flake8-django = "^0.0.4"
coverage= "^5.0.4"
black= "^19.10b0"
pylint-django= "^2.0.14"
pylint-celery= "^0.3"
pre-commit= "^2.2.0"
factory-boy= "^2.12.0"

django-debug-toolbar= "^2.2"
django-extensions= "^2.2.9"
django-coverage-plugin= "^1.8.0"
django-querycount = "^0.7"
django-migration-linter = "^1.4"

pytest = "^5.3"
pytest-django = "^3.9"
pytest-cov = "^2.8"
pytest-randomly = "^3.1"
pytest-deadfixtures = "^2.1"
pytest-testmon = "^1.0"
pytest-timeout = "^1.3"
django-test-migrations = "^0.1.0"
hypothesis = "^5.7.0"
nplusone = "^1.0"


